force-app/main/default/objects/NPSSurvey__c/NPSSurvey__c.object-meta.xml
<CustomObject>
    <description>SSSW Object to hold NPS survey data</description>
    <label>NPS Survey</label>
    <nameField>
        <displayFormat>NPS{0000000}</displayFormat>
        <label>NPS Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>