force-app/main/default/objects/NPSSurvey__c/fields/Customer_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Customer_Resolved__c</fullName>
    <formula>if ( ISPICKVAL( Source__c , &quot;Voice&quot;) ,

CASE( Answer2__c, &quot;1&quot;, &quot;Yes&quot;, &quot;2&quot;, &quot;No&quot;, &quot;3&quot;, &quot;Too Early to Tell&quot;,&quot;&quot;),Answer2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Resolved</label>
    <type>Text</type>
</CustomField>