force-app/main/default/objects/NPSSurvey__c/fields/FeedbackDate__c.field-meta.xml
<CustomField>
    <fullName>FeedbackDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Feedback Date</label>
    <type>Date</type>
</CustomField>