force-app/main/default/objects/NPSSurvey__c/fields/IsCreatorLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>IsCreatorLoggedIn__c</fullName>
    <description>Field to determine if logged  in user is the creator for Performance report used by reporting team.</description>
    <formula>CreatedById =  $User.Id</formula>
    <label>Is Creator Logged In</label>
    <type>Checkbox</type>
</CustomField>