force-app/main/default/objects/NPSSurvey__c/fields/ManagerLevel2__c.field-meta.xml
<CustomField>
    <fullName>ManagerLevel2__c</fullName>
    <formula>Agent__r.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Agent__r.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Level 2</label>
    <type>Text</type>
</CustomField>