force-app/main/default/objects/NPSSurvey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Question1__c</columns>
    <columns>Answer1__c</columns>
    <columns>Question2__c</columns>
    <columns>Answer2__c</columns>
    <columns>Question3__c</columns>
    <columns>Answer3__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>Comments__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>